templates {{ corection and ads

--- a/templates/base.html
+++ b/templates/base.html
@@ -145,7 +145,7 @@
                             <h2>Follow Us</h2>
                             <div class="contact-info">
                                 <div class="social">
-                                    {% for contact.contacts %}
+                                    {% for contact in contacts %}
                                     <a href="{{contact.twitter}}"><i class="fab fa-twitter"></i></a>
                                     <a href="{{contact.facebook}}"><i class="fab fa-facebook-f"></i></a>
                                     <a href="{{contact.linkedin}}"><i class="fab fa-linkedin-in"></i></a>
