--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                         <div class="header-slider normal-slider">
                             {% for slider in sliders %}
                             <div class="header-slider-item">
-                                <img src="slider.image.url" alt="Slider Image" />
+                                <img src="{{slider.image.url}}" alt="Slider Image" />
                                 <div class="header-slider-caption">
                                     <p>{{slider.description}}</p>
                                     <a class="btn" href="{{slider.link}}"><i class="fa fa-shopping-cart"></i>Shop Now</a>
@@ -32,18 +32,26 @@
                     </div>
                     <div class="col-md-3">
                         <div class="header-img">
+                            {% for ad in ads %}
+                            {% if ad.rank == 1 %}
                             <div class="img-item">
-                                <img src="img/category-1.jpg" />
+                                <img src="{{ad.image.url}}" />
                                 <a class="img-text" href="">
-                                    <p>Some text goes here that describes the image</p>
+                                    <p>{{ad.description}}</p>
                                 </a>
                             </div>
+                            {% endif %}
+                            {% endfor %}
+                            {% for ad in ads %}
+                            {% if ad.rank == 2 %}
                             <div class="img-item">
-                                <img src="img/category-2.jpg" />
+                                <img src="ad.image.url" />
                                 <a class="img-text" href="">
-                                    <p>Some text goes here that describes the image</p>
+                                    <p>{{ad.description}}</p>
                                 </a>
                             </div>
+                            {% endif %}
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
@@ -112,49 +120,75 @@
         <div class="category">
             <div class="container-fluid">
                 <div class="row">
+
                     <div class="col-md-3">
+                        {% for ad in ads %}
+                        {% if ad.rank == 3 %}
                         <div class="category-item ch-400">
-                            <img src="img/category-3.jpg" />
+                            <img src="ad.image.url" />
                             <a class="category-name" href="">
-                                <p>Some text goes here that describes the image</p>
+                                <p>{{ad.description}}</p>
                             </a>
                         </div>
+                        {% endif %}
+                        {% endfor %}
                     </div>
+
                     <div class="col-md-3">
+                        {% for ad in ads %}
+                        {% if ad.rank == 4 %}
                         <div class="category-item ch-250">
-                            <img src="img/category-4.jpg" />
+                            <img src="{{ad.image.url}}" />
                             <a class="category-name" href="">
-                                <p>Some text goes here that describes the image</p>
+                                <p>{{ad.description}}</p>
                             </a>
                         </div>
+                        {% endif %}
+                        {% endfor %}
+                        {% for ad in ads %}
+                        {% if ad.rank == 5 %}
                         <div class="category-item ch-150">
-                            <img src="img/category-5.jpg" />
+                            <img src="{{ad.image.url}}" />
                             <a class="category-name" href="">
-                                <p>Some text goes here that describes the image</p>
+                                <p>{{ad.description}}</p>
                             </a>
                         </div>
+                        {% endif %}
+                        {% endfor %}
                     </div>
                     <div class="col-md-3">
+                        {% for ad in ads %}
+                        {% if ad.rank == 6%}
                         <div class="category-item ch-150">
-                            <img src="img/category-6.jpg" />
+                            <img src="{{ad.image.url}}" />
                             <a class="category-name" href="">
-                                <p>Some text goes here that describes the image</p>
+                                <p>{{ad.description}}</p>
                             </a>
                         </div>
+                        {% endif%}
+                        {% endfor %}
+                        {% for ad in ads %}
+                        {% if ad.rank == 7%}
                         <div class="category-item ch-250">
-                            <img src="img/category-7.jpg" />
+                            <img src="{{ad.image.url}}" />
                             <a class="category-name" href="">
-                                <p>Some text goes here that describes the image</p>
+                                <p>{{ad.description}}</p>
                             </a>
                         </div>
+                        {% endif %}
+                        {% endfor %}
                     </div>
                     <div class="col-md-3">
+                        {% for ad in ads %}
+                        {% if ad.rank == 8 %}
                         <div class="category-item ch-400">
-                            <img src="img/category-8.jpg" />
+                            <img src="{{ad.image.url}}" />
                             <a class="category-name" href="">
-                                <p>Some text goes here that describes the image</p>
+                                <p>{{ad.description}}</p>
                             </a>
                         </div>
+                        {% endif %}
+                        {% endfor %}
                     </div>
                 </div>
             </div>
